--- a/gmail_email_interface.html
+++ b/gmail_email_interface.html
@@ -358,13 +358,13 @@
 
     <div class="container">
         <div class="header">
-            <h1>📧 Gmail Email Composer</h1>
-            <p>Reliable email sending with Gmail SMTP - No Microsoft auth issues!</p>
+            <h1>📧 Cogent Email Composer</h1>
+            <p>Reliable email preview and sending with Gmail SMTP</p>
         </div>
 
         <div class="alert">
-            <strong>🚨 Microsoft Hotmail/Outlook Issue:</strong> Microsoft has disabled basic authentication for many accounts. 
-            This Gmail-based solution is more reliable. If you need Outlook, consider using the desktop Outlook app instead.
+            <strong>🚨 Microsoft Outlook:</strong> Corporate accounts might require authentication for Outlook COM. 
+            If you need Outlook, consider using the desktop Outlook app.
         </div>
 
         <div class="main-content">
@@ -435,15 +435,30 @@
 <head>
 <title>Dear Car Owner</title>
 </head>
-<body style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;">
-<h2 style="color: #333;">Your new ride!</h2>
-<p>Here's your amazing new car:</p>
+<body style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto; color: #444;">
+<h2 style="color: #333;">Explore new frontiers with your new ride!</h2>
+<p>Here's your amazing all-new AMG:</p>
 <img src="{{IMAGE_PLACEHOLDER}}" style="max-width: 100%; height: auto; border-radius: 8px;">
+<p>Congrats on your new <strong>Mercedes-AMG</strong>! Experience the ultimate in performance luxury with these highlights:</p>
+<div style="background-color: #f7f7f7; padding: 15px; border-left: 4px solid #002f6c;">
+  <h3 style="color: #002f6c;"><strong>Handcrafted Performance</strong></h3>
+  <p>Experience a level of performance and luxury that is <strong>truly unique</strong>. This isn't just a car; it's a handcrafted <strong>masterpiece of speed and precision</strong>.</p>
+  
+  <h3 style="color: #002f6c;"><strong>Exceptional Engineering</strong></h3>
+  <p><strong>Mercedes-AMG</strong> is the performance luxury brand where automotive dreams are built with <strong>passion and expertise</strong>. Combine handcrafted engines with aerodynamic styling, cutting edge technology for a driving experience that is both <strong>thrilling and refined</strong>.</p>
+  
+  <h3 style="color: #002f6c;"><strong>Distinctive Luxury</strong></h3>
+  <p>Step inside and be immersed in a driver-focused cockpit where <strong>premium materials</strong> meet <strong>unparalleled craftsmanship</strong>, designed for <strong>ultimate comfort and engagement</strong>.</p>
+  
+  <h3 style="color: #002f6c;"><strong>Exclusive Prestige</strong></h3>
+  <p>Discover the <strong>AMG difference</strong> as the ultimate expression of speed and automotive prestige. The perfect performance luxury vehicle to match <strong>your passion for driving</strong>.</p>
+</div>
 <p>Thank you for your business!</p>
-<p>Best regards,<br><strong>The Car Team</strong></p>
+<p>Best regards,<br><strong>The AMG Team</strong></p>
 <p><small>Sent via Gmail SMTP - Reliable delivery guaranteed!</small></p>
 </body>
 </html>
+
                     </textarea>
                 </div>
             </div>
